@@ -912,6 +912,13 @@
 </property>
 
 <property>
+  <name>hive.security.authorization.createtable.owner.grants</name>
+  <value>All</value>
+  <description>the privileges automatically granted to the owner whenever a table gets created. 
+   An example like "select,drop" will grant select and drop privilege to the owner of the table</description>
+</property>
+
+<property>
   <name>hive.error.on.empty.partition</name>
   <value>false</value>
   <description>Whether to throw an excpetion if dynamic partition insert generates empty results.</description>
